--- a/getting-started/validation-troubleshooting/common-issues.mdx
+++ b/getting-started/validation-troubleshooting/common-issues.mdx
@@ -1,172 +1,186 @@
 ---
-title: "Troubleshooting Common Issues"
-description: "Solutions to the most frequent setup problems: build errors, missing dependencies, linking issues, and environment misconfigurations. Includes links to FAQs and community resources."
+title: "Troubleshooting Common Setup Issues"
+description: "A practical guide to addressing frequent setup obstacles: build errors, linkage problems, missing dependencies, and platform-specific quirks. Includes tips for interpreting error messages and where to find further help."
 ---
 
-# Troubleshooting Common Issues
+# Troubleshooting Common Setup Issues
 
-When integrating GoogleMock into your testing environment, encountering setup and runtime issues is common. This guide addresses the most frequent problems such as build errors, missing dependencies, linking issues, and environment misconfigurations. Alongside, it provides practical troubleshooting advice, enabling you to quickly diagnose and resolve problems to ensure smooth operation.
-
----
-
-## 1. Common Setup and Build Problems
-
-### 1.1 Build Errors
-
-- **Undefined References to Mock Methods**
-  - Cause: Missing or incorrect linking of GoogleMock libraries or forgetting to include source files.
-  - Solution: Ensure that `gmock` and related libraries are linked correctly. For CMake projects, verify `target_link_libraries` includes `gmock` and `gmock_main` (if using the main).
-  - Tip: Verify that your mock classes are correctly defined with `MOCK_METHOD` macros and that the macros are in the public section of the mock class.
-
-- **Compiler Warnings Related to Mock Methods With `const` Parameters**
-  - Cause: Some compiler versions (notably MSVC 2005 SP1) emit warnings when mock methods are declared with `const` parameters even though `const` qualifiers on parameters are ignored in C++ declarations.
-  - Solution: Remove `const` in parameter declarations in both interface and mock declarations.
-
-- **Slow Compilation When Mocking Large Classes**
-  - Cause: The mock class constructor and destructor generation can consume significant compiler resources when many mock methods exist.
-  - Solution: Move the mock class's constructor and destructor definitions out of the header file into the `.cc` file. This prevents multiple instantiations across compilation units and speeds up the build.
-
-### 1.2 Missing Dependencies
-
-- **Build Tool Missing**
-  - Ensure CMake or Bazel (depending on build method) is installed correctly.
-- **C++ Standard Compliance**
-  - GoogleMock requires C++17 or above; compiling with older standards leads to errors.
-
-### 1.3 Linking Issues
-
-- Verify that your build system includes proper linking paths for GoogleMock and GoogleTest libraries.
-- When building from source, ensure that both `gtest` and `gmock` libraries are available and correctly specified.
+This practical guide helps you quickly diagnose and resolve the most frequent setup problems encountered when integrating and building GoogleTest and GoogleMock in your C++ projects. It covers build errors, linkage problems, missing dependencies, and platform-specific quirks, enabling you to interpret error messages effectively and continue your testing journey without delay.
 
 ---
 
-## 2. Runtime and Mock-Related Issues
+## 1. Build Errors and Linkage Problems
 
-### 2.1 Unexpected or Uninteresting Calls
+Build failures are common when starting with GoogleTest, often related to missing headers, unresolved references, or incompatible build options.
 
-- **Uninteresting Call Warning**
-  - Occurs when a mock method without an expectation (`EXPECT_CALL`) is called.
-  - By default, GoogleMock warns but continues running.
-  - Solution: If these calls are expected and safe to ignore, use `NiceMock<T>` instead of `Mock<T>`, which suppresses warnings on uninteresting calls.
-  - If calls should be verified, add proper `EXPECT_CALL` statements or use `EXPECT_CALL(...).Times(AnyNumber())` for methods you want to allow but not strictly verify.
+### 1.1 Missing Headers or Include Path Issues
 
-- **Unexpected Call Failure**
-  - Happens when a mock method is called with arguments that don't match any specified expectation.
-  - Solution: Review your `EXPECT_CALL` arguments and ensure they match the parameters passed during execution.
+**Symptom:** Compilation errors like `fatal error: gtest/gtest.h: No such file or directory`.
 
-### 2.2 Expectations Not Satisfied
+**Action Steps:**
 
-- If gMock reports that expectations are not satisfied, run your tests with `--gmock_verbose=info`.
-  - This prints detailed traces of calls and their matching expectations.
-  - Use this output to locate mismatches or missing calls.
+- Verify that your include paths properly point to the directory containing GoogleTest headers.
+- If you are using CMake or Bazel, ensure you have correctly added GoogleTest as a dependency and included its headers with the `target_include_directories` or equivalent.
+- For manual builds, make sure you cloned or downloaded the GoogleTest repository and set your compiler's include search path accordingly.
 
-### 2.3 Multiple Failure Reports of the Same Expectation
+### 1.2 Unresolved Symbols During Linking
 
-- GoogleMock may print multiple failures for the same unmet expectation across different points during execution.
-- This is informational and reflects the state changes over time, not redundant messages.
+**Symptom:** Linker errors such as `undefined reference to 'testing::InitGoogleTest(int*, char**)'`.
 
-### 2.4 Heapcheck Issues When Using Mock Objects
+**Action Steps:**
 
-- Cause: Base class being mocked lacks a virtual destructor, leading to incomplete destruction of derived mock objects.
-- Solution: Always declare destructors as `virtual` in interfaces.
+- Confirm that the GoogleTest and GoogleMock libraries are properly linked to your test executable.
+- When using CMake, target the `gtest` and `gmock` libraries, or link the combined `gmock_main` if you rely on its default `main()` function.
+- Check for consistent build flags and compiler settings between your code and GoogleTest binaries.
 
-### 2.5 Mocking Non-Virtual or Static Methods
+### 1.3 Multiple Definition or Conflict Errors
 
-- GoogleMock cannot directly mock static or non-virtual methods.
-- Suggested workaround:
-  - Refactor code to use interfaces with virtual methods.
-  - Use template-based dependency injection for non-virtual methods.
-  - For static functions, use interfaces or wrapper classes to enable mocking.
+**Symptom:** Errors indicating multiple definitions, often related to `main()` or static symbols.
 
-### 2.6 Mock Method Overloading Issues
+**Action Steps:**
 
-- When mocking overloaded methods, ensure all overloads are mocked if used to avoid hidden base class methods.
-- Use `using Base::MethodName;` inside your mock to bring unmocked overloads into scope.
+- Use `gmock_main` only when you want the default test entry point; if you write your own `main()`, avoid linking `gmock_main`.
+- Be cautious of linking GoogleTest multiple times via static libs or bundled sources.
+- Use proper include guards and namespace scopes if you include GoogleTest source files directly.
 
----
+<Note>
+If you encounter conflicting symbols on different platforms, it may be due to linkage of incompatible runtime libraries or mixing debug and release builds. Consistency is key.
+</Note>
 
-## 3. Controls for Mock Behavior
+## 2. Missing Dependencies
 
-### 3.1 Adjusting Strictness
+GoogleTest has minimal external dependencies, but certain build tools and environment requirements are essential.
 
-- **NaggyMock (default)**: Prints warnings for uninteresting calls.
-- **NiceMock**: Suppresses warnings for uninteresting calls.
-- **StrictMock**: Treats uninteresting calls as errors (failures).
+### 2.1 Compiler Support and C++ Standards
 
-Use these wrapper templates to tune test sensitivity:
+- Ensure your compiler supports C++11 or later (GoogleTest requires at least C++11).
+- Check compiler version compatibility as documented in the [System Requirements](getting-started/prerequisites-installation/system-requirements).
 
-```cpp
-using ::testing::NiceMock;
-using ::testing::StrictMock;
+### 2.2 Build Tools
 
-NiceMock<MockClass> nice_mock;
-StrictMock<MockClass> strict_mock;
-```
+- For CMake: Confirm that you have a functional CMake installation (3.5 or higher recommended).
+- For Bazel: Ensure your Bazel version meets minimum requirements; refer to [Getting Started: Building with CMake and Bazel](guides/core-workflows/getting-started-cmake-bazel).
 
-### 3.2 Verbosity Levels
+### 2.3 Platform-Specific Libraries
 
-Control message verbosity during test runs with the `--gmock_verbose=` flag:
-
-- `info`: Shows all info, warnings, errors; includes detailed call traces.
-- `warning`: Shows warnings and errors (default).
-- `error`: Shows errors only.
-
----
-
-## 4. Debugging Tips and Best Practices
-
-- Run your tests with `--gmock_verbose=info` to gain insight into mock calls and matching expectations.
-- Use sequences (`InSequence`), ordering (`After`), and cardinalities (`Times`) to specify call order and frequency clearly.
-- Avoid over-specifying expectations; use `ON_CALL` for default behaviors and `EXPECT_CALL` only for calls you want to verify.
-- Use `RetiresOnSaturation()` on expectations to mark them inactive after fulfillment, useful in managing overlapping expectations.
-
----
-
-## 5. Links to FAQs and Community Resources
-
-- For quick answers to frequent questions, see the [Legacy gMock FAQ](https://github.com/google/googletest/blob/main/docs/gmock_faq.md).
-- For detailed recipes and usage examples, consult the [gMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md).
-- Engage with the community through the [Support Resources & Community Help](https://github.com/google/googletest/blob/main/faq/community-support/support-resources-faq.md).
-
----
-
-## 6. Additional Troubleshooting Resources
-
-<AccordionGroup title="Troubleshooting Common Issues">
-<Accordion title="Build and Linking Errors">
-Ensure dependencies are met, libraries linked, and compiler versions are compatible. Inspect build output for missing symbols or incorrect flags.
-</Accordion>
-<Accordion title="Mock Function Misbehavior">
-Use `--gmock_verbose=info` to trace calls, verify expectations, and debug unexpected or unmet calls.
-</Accordion>
-<Accordion title="Compiler-Specific Issues">
-For MSVC warnings related to const parameters, remove top-level const qualifiers in method signatures.
-</Accordion>
-<Accordion title="Memory Leaks with Mocks">
-Use `Mock::AllowLeak()` to explicitly allow leaked mocks or verify proper destruction.
-</Accordion>
-</AccordionGroup>
+- Windows builds require a compatible MSVC version or MinGW.
+- On Linux/macOS, standard system development packages (like build-essential, clang, or gcc) must be installed.
 
 <Tip>
-Always prefer `EXPECT_CALL` before exercising your mock objects, and avoid setting expectations after usage to prevent undefined behavior.
+If you use prebuilt packages or package managers, make sure their GoogleTest versions and dependencies align with your project requirements.
+</Tip>
+
+## 3. Platform-Specific Quirks
+
+Though GoogleTest supports major platforms uniformly, subtle differences can cause issues.
+
+### 3.1 Windows
+
+- Visual Studio projects may require explicit linking of certain runtime libraries.
+- Memory leak detection messages may appear due to GoogleTest's own static instances; see [FAQ](faq.md#how-can-i-suppress-the-memory-leak-messages-on-windows).
+
+### 3.2 macOS
+
+- System integrity protection (SIP) and permissions might affect debugging setups.
+- Use Apple Clang or updated GCC versions compatible with C++11.
+
+### 3.3 Linux
+
+- Ensure you have development headers for pthreads and rt libraries if required.
+- Use consistent compiler versions to avoid ABI incompatibilities.
+
+<Warning>
+Beware of mixing different standard library implementations (libstdc++ vs libc++). It can cause strange build or runtime failures.
+</Warning>
+
+## 4. Interpreting Error Messages
+
+Understanding compilation and linkage errors is crucial.
+
+### 4.1 Typical Header Errors
+
+- `file not found`: Check include paths.
+- Version mismatch errors: Verify you are using compatible GoogleTest versions and build options.
+
+### 4.2 Linker Errors
+
+- `undefined reference`: Missing linkage with GoogleTest libraries.
+- `multiple definition`: Duplicate symbols, typically from linking both source files and libraries.
+
+### 4.3 Runtime Errors
+
+- Test executable crashes: Confirm test fixture setup and dependency correctness.
+
+<Note>
+Run tests with `--gtest_break_on_failure` to debug assertion failures interactively.
+</Note>
+
+## 5. Best Practices to Avoid Setup Issues
+
+- Use the official GoogleTest release corresponding to your project.
+- Follow build instructions precisely, whether via CMake, Bazel, or manual integration.
+- Keep your test and GoogleTest code compiled with the same compiler and flags.
+- Use the `gtest_main` library to simplify linking, unless a custom `main()` is needed.
+
+## 6. Where to Find Further Help
+
+- Browse the [GoogleTest FAQ](docs/faq.md) for answers to common questions.
+- Review the [Installation Methods](getting-started/prerequisites-installation/installation-methods) guide.
+- Visit the [GitHub Issues](https://github.com/google/googletest/issues) page to check for reported problems.
+- Consult community-created documentation linked in the [Community-Created Documentation](docs/community_created_documentation.md).
+
+<Tip>
+Engage with the community and inspect examples in `googletest/samples/` for working setups.
 </Tip>
 
 ---
 
-By systematically addressing the issues described here, users will have a much smoother experience in setting up and running GoogleMock tests. This guide complements basic installation and getting started resources by focusing on resolution pathways for common pitfalls.
+This guide helps you overcome the common barriers during your initial GoogleTest setup, so you can focus on writing and running reliable tests rapidly.
 
 
 ---
 
-## Sample Diagnostic Command
+## Related Documentation
 
-Run your tests with verbose logging and capture the output:
+- [GoogleTest Primer](overview/product-intro-core-concepts/what-is-gtest)
+- [Installation on Different Platforms](getting-started/prerequisites-installation/installation-methods)
+- [Setup and Project Integration](getting-started/configuration-first-run/configuration-setup)
+- [Your First Test: From Source to Success](getting-started/configuration-first-run/your-first-test)
+- [GoogleTest FAQ](docs/faq.md)
 
-```sh
-./your_test_binary --gmock_verbose=info
+---
+
+# Quick Validation Checklist
+
+After resolving your setup issues, you may want to verify your environment and build by following the [Quick Validation Checklist](getting-started/validation-troubleshooting/validation-steps) documentation.
+
+---
+
+# Troubleshooting Example
+
+Consider the following linker error message:
+
+```text
+undefined reference to `testing::InitGoogleTest(int*, char**)'
 ```
 
-Analyze the output for mismatched calls or unmet expectations and refine your test setup accordingly.
+This indicates the linker cannot find GoogleTest's core library symbols. You should:
+
+1. Confirm that the GoogleTest libraries (`libgtest.a`, `libgmock.a` or their equivalents) are built.
+2. Add them to your link command or CMake target_link_libraries appropriately.
+3. Make sure you aren't mixing static and shared libraries unexpectedly.
 
 
 ---
+
+# Final Tips
+
+- Use `--gtest_list_tests` to see what tests are registered, confirming proper integration.
+- Run with `--gtest_filter=...` to isolate specific tests.
+- Use `--gtest_break_on_failure` to debug failing tests interactively.
+
+
+
+---
+
+*This page is maintained as part of the GoogleTest Getting Started documentation and fits within the validation and troubleshooting section to guide new users through setup hurdles.*
