--- a/api-reference/core-testing-api/assertions.mdx
+++ b/api-reference/core-testing-api/assertions.mdx
@@ -1,376 +1,382 @@
 ---
-title: "Assertions and Expectations"
-description: "Documentation for the wide range of assertion macros (equality, exception, floating point, death, etc.), their intended usage, and the difference between fatal and non-fatal variants. Examples clarify how to ensure robust, readable test verification."
+title: "Assertions"
+description: "A detailed walkthrough of assertion macros (EXPECT_*, ASSERT_*) with parameters, expected behaviors, and examples. Covers standard assertions, fatal vs non-fatal assertions, and user-defined assertions for expressing expected outcomes in tests."
 ---
 
-# Assertions and Expectations
+# Assertions
 
-This page provides a comprehensive reference for the wide range of assertion macros provided by GoogleTest, designed to verify code behavior in C++ testing. It details how to use these macros, the difference between fatal and non-fatal variants, and gives practical examples to create robust, readable tests.
+This page provides an in-depth walkthrough of GoogleTest's assertion macros that let you express the expected outcomes in your tests clearly and precisely. Assertions validate conditions during tests and produce either success, non-fatal failure (test continues), or fatal failure (test aborts).
 
-## Understanding Assertions in GoogleTest
+Assertions come in pairs: `EXPECT_*` for non-fatal checks and `ASSERT_*` for fatal checks. This distinction empowers you to decide whether a failure should stop test execution immediately or let the test continue to report multiple failures.
 
-Assertions are the fundamental building blocks in GoogleTest that check whether specific conditions hold true in your tests. They come in pairs:
-
-- **EXPECT_**: Non-fatal checks that report failures but allow the test to continue.
-- **ASSERT_**: Fatal checks that abort the current test function on failure.
-
-You can append custom failure messages to any assertion using the stream operator (`<<`). This greatly enhances debugging by providing contextual information.
-
-```cpp
-EXPECT_TRUE(condition) << "Condition failed because ...";
-ASSERT_EQ(expected, actual) << "Mismatch in values";
-```
-
+All assertion macros accept user messages via streaming (`<<`) for added clarity in test failures.
 
 ---
 
 ## 1. Explicit Success and Failure
 
-Sometimes you want to explicitly record success or failure in a test.
+These macros control the flow of a test unconditionally and are useful when logical branches determine outcomes.
 
-### SUCCEED()
+- **SUCCEED()**
+  - Marks an explicit success at a point in the test.
+  - Does not override previous failures.
+  - Mostly documentary.
+  
+  ```cpp
+  SUCCEED() << "Reached this point without errors";
+  ```
 
-Force a success. Does not make the overall test pass by itself but documents intent.
+- **FAIL()**
+  - Generates a fatal failure and aborts the current function.
+  - Use when continuing after failure is nonsensical.
+  
+  ```cpp
+  if (unexpected_condition) {
+    FAIL() << "Unexpected condition met";
+  }
+  ```
 
-```cpp
-SUCCEED();
-```
+- **ADD_FAILURE()**
+  - Generates a non-fatal failure.
+  - Useful for reporting additional checks without aborting.
+  
+  ```cpp
+  if (some_check_fails) {
+    ADD_FAILURE() << "Check did not pass";
+  }
+  ```
 
-### FAIL()
-
-Force a fatal failure that aborts the current void function immediately.
-
-```cpp
-FAIL() << "Unexpected error happened";
-```
-
-### ADD_FAILURE()
-
-Report a non-fatal failure allowing test to continue.
-
-```cpp
-ADD_FAILURE() << "This part failed, but test continues";
-```
-
-### ADD_FAILURE_AT(file, line)
-
-Report failure at a specific source location; useful when validating complex tests.
-
-```cpp
-ADD_FAILURE_AT("foo.cc", 42) << "Value is incorrect";
-```
-
-
----
-
-## 2. Generalized Assertion with Matchers
-
-`EXPECT_THAT` and `ASSERT_THAT` enable writing expressive assertions using matchers, which provide powerful ways to specify complex conditions.
-
-### Syntax
-
-```cpp
-EXPECT_THAT(value, matcher);
-ASSERT_THAT(value, matcher);
-```
-
-Example: checking a string starts with "Hello":
-
-```cpp
-using ::testing::StartsWith;
-
-EXPECT_THAT(message, StartsWith("Hello"));
-```
-
-This produces readable, informative failure messages when mismatched.
-
-More about matchers: [Matchers Reference](matchers.md)
-
+- **ADD_FAILURE_AT(file, line)**
+  - Reports a non-fatal failure at a specific file and line.
 
 ---
 
-## 3. Boolean Condition Assertions
+## 2. Boolean Conditions
 
-Test basic boolean conditions in your tests.
+Validate Boolean expressions directly:
 
-- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)` verifies the condition is true.
-- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)` verifies the condition is false.
+- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`
+  - Pass if `condition` evaluates to `true`.
+- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`
+  - Pass if `condition` evaluates to `false`.
+
+These macros provide clear failure messages printing the expression and actual value.
+
+```cpp
+EXPECT_TRUE(ptr != nullptr) << "Pointer should not be null";
+ASSERT_FALSE(error_occurred) << "Error should not occur";
+```
+
+---
+
+## 3. Binary Comparisons
+
+For comparing two values based on relational operators, these macros help you express expectations with detailed failures:
+
+| Macro         | Meaning              |
+|---------------|----------------------|
+| EXPECT_EQ(a,b)/ASSERT_EQ(a,b) | Checks `a == b`       |
+| EXPECT_NE(a,b)/ASSERT_NE(a,b) | Checks `a != b`       |
+| EXPECT_LT(a,b)/ASSERT_LT(a,b) | Checks `a < b`        |
+| EXPECT_LE(a,b)/ASSERT_LE(a,b) | Checks `a <= b`       |
+| EXPECT_GT(a,b)/ASSERT_GT(a,b) | Checks `a > b`        |
+| EXPECT_GE(a,b)/ASSERT_GE(a,b) | Checks `a >= b`       |
+
+Pointers are compared for pointer equality, not content. For C strings use string-specific macros (below).
+
+```cpp
+EXPECT_EQ(result, 42) << "Result must be 42";
+ASSERT_LT(value, max) << "Value exceeds max";
+```
+
+---
+
+## 4. String Comparisons
+
+Special handling is provided for C strings (`const char*`) and wide strings:
+
+| Macro                 | Meaning                                                  |
+|-----------------------|----------------------------------------------------------|
+| EXPECT_STREQ(a, b) / ASSERT_STREQ(a, b)           | C-strings are equal by content                                 |
+| EXPECT_STRNE(a, b) / ASSERT_STRNE(a, b)           | C-strings are *not* equal by content                            |
+| EXPECT_STRCASEEQ(a, b) / ASSERT_STRCASEEQ(a, b)   | Equal ignoring case                                            |
+| EXPECT_STRCASENE(a, b) / ASSERT_STRCASENE(a, b)   | Not equal ignoring case                                        |
+
+All accept wide strings as well. Null C strings are handled gracefully.
+
+```cpp
+EXPECT_STREQ(expected_cstr, actual_cstr);
+ASSERT_STRCASEEQ("Hello", "hello");
+```
+
+---
+
+## 5. Floating-Point Comparisons
+
+Regular equality is insufficient for floating-point due to rounding errors.
+
+- `EXPECT_FLOAT_EQ(a,b)` / `ASSERT_FLOAT_EQ(a,b)`
+  - Checks `float` equality with tolerance (~4 ULPs).
+- `EXPECT_DOUBLE_EQ(a,b)` / `ASSERT_DOUBLE_EQ(a,b)`
+  - Checks `double` equality similarly.
+- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR(val1, val2, abs_error)`
+  - Checks if difference between `val1` and `val2` is within `abs_error`.
+
+```cpp
+EXPECT_NEAR(computed_value, expected_value, 1e-5);
+ASSERT_FLOAT_EQ(3.14159f, computed_float_value);
+```
+
+If the floating-point values are `NaN`, comparisons fail. Infinity is treated specially.
+
+---
+
+## 6. Exception Assertions
+
+Check whether code throws exceptions as expected.
+
+- `EXPECT_THROW(statement, exception_type)` / `ASSERT_THROW(statement, exception_type)`
+  - Verify that `statement` throws `exception_type`.
+- `EXPECT_ANY_THROW(statement)` / `ASSERT_ANY_THROW(statement)`
+  - Verify that `statement` throws any exception.
+- `EXPECT_NO_THROW(statement)` / `ASSERT_NO_THROW(statement)`
+  - Verify that `statement` does not throw any exception.
+
+```cpp
+EXPECT_THROW(DangerousOperation(), std::runtime_error);
+ASSERT_NO_THROW(SafeOperation());
+```
+
+---
+
+## 7. Predicate Assertions
+
+Enable more complex conditions with informative messages:
+
+### 7.1 EXPECT_PRED/n
+
+Macros like `EXPECT_PRED2(pred, val1, val2)` check if `pred(val1, val2)` returns `true`.
+
+They print each argument's value if the assertion fails.
+
+```cpp
+bool IsEven(int n) { return n % 2 == 0; }
+EXPECT_PRED1(IsEven, 4);  // Passes
+EXPECT_PRED1(IsEven, 3);  // Fails and prints values
+```
+
+### 7.2 EXPECT_PRED_FORMAT/n
+
+Allow writing custom formatting of failure messages.
+
+The predicate formatter must return a `testing::AssertionResult` and accept source expressions and their values.
+
+```cpp
+AssertionResult AssertIsEven(const char* expr, int n) {
+  if (n % 2 == 0) return AssertionSuccess();
+  return AssertionFailure() << expr << " (" << n << ") is not even.";
+}
+EXPECT_PRED_FORMAT1(AssertIsEven, 3);  // Will print custom message
+```
+
+This provides users full control over failure diagnostics.
+
+---
+
+## 8. Windows HRESULT Assertions
+
+Windows-specific macros to verify `HRESULT` values:
+
+- `EXPECT_HRESULT_SUCCEEDED(expr)` / `ASSERT_HRESULT_SUCCEEDED(expr)`
+  - Verify that `expr` succeeded.
+- `EXPECT_HRESULT_FAILED(expr)` / `ASSERT_HRESULT_FAILED(expr)`
+  - Verify that `expr` failed.
+
+Failure output includes human-readable error messages from the system.
+
+---
+
+## 9. Catching Failures in Utility Code
+
+GoogleTest provides macros to test whether a function generates fatal or non-fatal failures:
+
+- `EXPECT_FATAL_FAILURE(statement, substring)`
+- `EXPECT_NONFATAL_FAILURE(statement, substring)`
+
+These help when writing tests of test utilities or verifying that code fails as expected.
+
+---
+
+## 10. Additional Notes and Best Practices
+
+- Use `EXPECT_*` macros to continue running tests after failure and gather more error info.
+- Use `ASSERT_*` macros when continuing after failure is meaningless or unsafe.
+- Avoid placing `ASSERT_*` macros in constructors or destructors due to their fatal behavior.
+- You can stream custom messages into assertions to clarify failure contexts.
+
+---
+
+## 11. Examples
+
+```cpp
+// Basic equality assertion
+TEST(MathTest, Equal) {
+  EXPECT_EQ(2 + 2, 4) << "Simple math failure";
+}
+
+// Using ASSERT to abort on failure
+TEST(VectorTest, Access) {
+  std::vector<int> vec = {1, 2, 3};
+  ASSERT_FALSE(vec.empty());  // Test aborts if empty
+  EXPECT_EQ(vec[0], 1);
+}
+
+// Predicate assertion with custom message
+bool IsPositive(int n) { return n > 0; }
+
+TEST(FooTest, Positivity) {
+  EXPECT_PRED1(IsPositive, 5);
+  EXPECT_PRED1(IsPositive, -1) << "Number should be positive";
+}
+
+// Using EXPECT_DEATH to assert crashing behavior
+TEST(FooDeathTest, CrashOnBadInput) {
+  ASSERT_DEATH(Foo(-1), "Invalid input");
+}
+
+// Exception assertion
+TEST(FooTest, ThrowsOnError) {
+  EXPECT_THROW(Foo(-1), std::invalid_argument);
+}
+
+// Floating point near equality
+TEST(FooTest, ApproxEqual) {
+  EXPECT_NEAR(1.0, 1.00001, 0.0001);
+}
+```
+
+---
+
+## 12. Troubleshooting Common Issues
+
+- **Assertion in non-void function:** `ASSERT_*` macros cause fatal failures that abort the current function, which must be `void`. Use `EXPECT_*` in functions with return types.
+- **Streaming messages:** If streaming messages (`<<`) cause issues in macros, check for non-streamable types.
+- **Death test hangs or unexpected failures:** Death tests run in child processes; any side effects occur only in the child.
+  Use explicit naming of death test suites ending in `DeathTest` to ensure proper test ordering.
+- **Comparison of C strings:** Use `EXPECT_STREQ` and related macros to compare string content; `EXPECT_EQ` compares pointers.
+- **Handling floating-point precision:** Use `EXPECT_FLOAT_EQ` or `EXPECT_DOUBLE_EQ` instead of `EXPECT_EQ`.
+
+---
+
+For complete specification and all assertion macros, consult the [Assertions Reference](reference/assertions.md).
+
+
+<AccordionGroup title="Assertion Categories and Examples">
+<Accordion title="Explicit Success and Failure">
+
+- `SUCCEED()` — Explicitly records a success
+- `FAIL()` — Records a fatal failure and aborts function
+- `ADD_FAILURE()` — Records a non-fatal failure
 
 Example:
 
 ```cpp
-EXPECT_TRUE(user.IsActive()) << "User should be active";
-ASSERT_FALSE(data.IsEmpty());
+if (unexpected_path) {
+  FAIL() << "Unreachable code path hit";
+}
 ```
+</Accordion>
+<Accordion title="Boolean Assertions">
 
-
----
-
-## 4. Binary Comparison Assertions
-
-These compare two values using common comparison operators. Arguments must be comparable and can be streamed for failure messages.
-
-| Macro | Meaning |
-| --- | --- |
-| EXPECT_EQ(val1, val2) / ASSERT_EQ | Verifies equality (val1 == val2). For pointers, tests pointer equality; for C strings, use EXPECT_STREQ instead. |
-| EXPECT_NE(val1, val2) / ASSERT_NE | Verifies inequality (val1 != val2). |
-| EXPECT_LT(val1, val2) / ASSERT_LT | Verifies less than (val1 < val2). |
-| EXPECT_LE(val1, val2) / ASSERT_LE | Verifies less than or equal (val1 <= val2). |
-| EXPECT_GT(val1, val2) / ASSERT_GT | Verifies greater than (val1 > val2). |
-| EXPECT_GE(val1, val2) / ASSERT_GE | Verifies greater than or equal (val1 >= val2). |
+- `EXPECT_TRUE(condition) / ASSERT_TRUE(condition)`
+- `EXPECT_FALSE(condition) / ASSERT_FALSE(condition)`
 
 Example:
 
 ```cpp
-EXPECT_EQ(5, ComputeValue()) << "Computation failed";
-ASSERT_LT(received, max_allowed) << "Received too large";
+EXPECT_TRUE(IsValid(input)) << "Input should be valid";
 ```
+</Accordion>
+<Accordion title="Binary Comparisons">
 
-Tips:
-- When comparing C strings, **do not use** `EXPECT_EQ`; use the string comparators instead.
-- Values are evaluated exactly once, preventing side effects.
-
-
----
-
-## 5. String Comparison Assertions
-
-For comparing **C strings** (e.g., `const char*`), these macros check string content and optionally ignore case.
-
-| Macro | Meaning |
-| --- | --- |
-| EXPECT_STREQ(str1, str2) / ASSERT_STREQ | Verifies two C strings have the same content. |
-| EXPECT_STRNE(str1, str2) / ASSERT_STRNE | Verifies two C strings differ. |
-| EXPECT_STRCASEEQ(str1, str2) / ASSERT_STRCASEEQ | Verifies two C strings are equal ignoring case. |
-| EXPECT_STRCASENE(str1, str2) / ASSERT_STRCASENE | Verifies two C strings differ ignoring case. |
-
-Example usage:
-
-```cpp
-EXPECT_STREQ("hello", greeting.c_str());
-ASSERT_STRCASEEQ("foo", "FOO");
-```
-
-Note:
-- Comparison of wide C strings (`wchar_t*`) is supported.
-
-
----
-
-## 6. Floating-Point Comparison
-
-Due to rounding errors, floating-point numbers need special comparison.
-
-| Macro | Meaning |
-| --- | --- |
-| EXPECT_FLOAT_EQ(val1, val2) / ASSERT_FLOAT_EQ | Checks `float` values approximately equal within 4 ULPs. |
-| EXPECT_DOUBLE_EQ(val1, val2) / ASSERT_DOUBLE_EQ | Checks `double` values approximately equal within 4 ULPs. |
-| EXPECT_NEAR(val1, val2, abs_error) / ASSERT_NEAR | Checks values are within an absolute error bound. |
+- `EXPECT_EQ(a, b) / ASSERT_EQ(a, b)` — equal
+- `EXPECT_NE(a, b) / ASSERT_NE(a, b)` — not equal
+- `EXPECT_LT(a, b) / ASSERT_LT(a, b)` — less than
+- `EXPECT_LE(a, b) / ASSERT_LE(a, b)` — less or equal
+- `EXPECT_GT(a, b) / ASSERT_GT(a, b)` — greater than
+- `EXPECT_GE(a, b) / ASSERT_GE(a, b)` — greater or equal
 
 Example:
 
 ```cpp
-EXPECT_FLOAT_EQ(3.14f, result) << "Calculation off";
-ASSERT_NEAR(expected, actual, 0.001) << "Values differ too much";
+ASSERT_LE(result, max_value) << "Result exceeds maximum";
 ```
+</Accordion>
+<Accordion title="String Comparisons">
 
-Tips:
-- Avoid `EXPECT_EQ` for floats/doubles.
-- ULP-based comparisons adapt to floating-point precision nuances.
-
-
----
-
-## 7. Exception Assertions
-
-Verify that your code correctly throws or does not throw exceptions. Exceptions must be enabled in your build.
-
-| Macro | Meaning |
-| --- | --- |
-| EXPECT_THROW(statement, exception_type) / ASSERT_THROW | Verifies `statement` throws the specified exception type. |
-| EXPECT_ANY_THROW(statement) / ASSERT_ANY_THROW | Verifies `statement` throws any exception. |
-| EXPECT_NO_THROW(statement) / ASSERT_NO_THROW | Verifies `statement` does not throw. |
+- `EXPECT_STREQ(a, b)` — C-string equality
+- `EXPECT_STRNE(a, b)` — C-string inequality
+- `EXPECT_STRCASEEQ(a, b)` — Case-insensitive equality
+- `EXPECT_STRCASENE(a, b)` — Case-insensitive inequality
 
 Example:
 
 ```cpp
-EXPECT_THROW(DoWork(), MyExceptionType);
-ASSERT_NO_THROW(Initialize());
+EXPECT_STRCASEEQ(actual, "expected") << "Strings differ ignoring case";
 ```
+</Accordion>
+<Accordion title="Floating-Point Comparisons">
 
-Notes:
-- Statements can be compound statements inside braces.
+- `EXPECT_FLOAT_EQ(a, b) / ASSERT_FLOAT_EQ(a, b)` — float approx equal
+- `EXPECT_DOUBLE_EQ(a, b) / ASSERT_DOUBLE_EQ(a, b)` — double approx equal
+- `EXPECT_NEAR(a, b, error)` — within absolute error
 
+Example:
 
----
+```cpp
+EXPECT_NEAR(calculated, expected, 1e-5);
+```
+</Accordion>
+<Accordion title="Exception Assertions">
 
-## 8. Predicate Assertions
+- `EXPECT_THROW(stmt, ExceptionType)`
+- `EXPECT_ANY_THROW(stmt)`
+- `EXPECT_NO_THROW(stmt)`
 
-For complex Boolean expressions or user-defined predicates, predicate assertions provide clearer failure messages.
+Example:
 
-### Simple predicates
+```cpp
+ASSERT_THROW(Foo(), std::runtime_error);
+```
+</Accordion>
+<Accordion title="Predicate Assertions">
 
-Use `EXPECT_PRED1` ... `EXPECT_PRED5` and `ASSERT_PRED1` ... `ASSERT_PRED5` to check predicates with 1 to 5 arguments.
+- `EXPECT_PREDn(pred, ...)` — predicate returning bool
+- `EXPECT_PRED_FORMATn(pred_fmt, ...)` — predicate returning `AssertionResult`
 
 Example:
 
 ```cpp
 bool IsEven(int n) { return n % 2 == 0; }
-EXPECT_PRED1(IsEven, value);
+EXPECT_PRED1(IsEven, 4);
 ```
+</Accordion>
+<Accordion title="Windows HRESULT Assertions">
 
-### Predicate with detailed formatting
-
-Use `EXPECT_PRED_FORMAT*` and `ASSERT_PRED_FORMAT*` with a predicate-formatter:
-
-```cpp
-AssertionResult IsEvenFormatted(const char* expr, int n) {
-  if (n % 2 == 0) return AssertionSuccess();
-  return AssertionFailure() << expr << " evaluates to " << n << ", which is odd.";
-}
-EXPECT_PRED_FORMAT1(IsEvenFormatted, value);
-```
-
-Tips:
-- Helpful for predicates where you want custom explanations on failure.
-
-
----
-
-## 9. Windows HRESULT Assertions
-
-Special macros designed to check HRESULT success or failure returned by Windows COM APIs.
-
-| Macro | Meaning |
-| --- | --- |
-| EXPECT_HRESULT_SUCCEEDED(expression) / ASSERT_HRESULT_SUCCEEDED | Checks HRESULT indicates success. |
-| EXPECT_HRESULT_FAILED(expression) / ASSERT_HRESULT_FAILED | Checks HRESULT indicates failure. |
+- `EXPECT_HRESULT_SUCCEEDED(expr)`
+- `EXPECT_HRESULT_FAILED(expr)`
 
 Example:
 
 ```cpp
-ASSERT_HRESULT_SUCCEEDED(shell.CoCreateInstance(L"Shell.Application"));
-EXPECT_HRESULT_FAILED(funcThatFails());
+EXPECT_HRESULT_SUCCEEDED(CoCreateInstance(...));
 ```
-
-Failure messages include the human-readable HRESULT error message.
-
+</Accordion>
+</AccordionGroup>
 
 ---
 
-## 10. Death Assertions
-
-Check that a piece of code causes the process to terminate as expected.
-
-| Macro | Meaning |
-| --- | --- |
-| EXPECT_DEATH(statement, matcher) / ASSERT_DEATH | Verifies process dies with stderr matching `matcher`. |
-| EXPECT_DEATH_IF_SUPPORTED(statement, matcher) / ASSERT_DEATH_IF_SUPPORTED | Same as `EXPECT_DEATH` if supported, else no check. |
-| EXPECT_DEBUG_DEATH(statement, matcher) / ASSERT_DEBUG_DEATH | Run the death test only in debug mode. |
-| EXPECT_EXIT(statement, predicate, matcher) / ASSERT_EXIT | Verifies process terminates with exit status satisfying predicate and stderr output matching matcher. |
-
-Example:
-
-```cpp
-EXPECT_DEATH(DoCrash(), "Fatal error on line .*" );
-EXPECT_EXIT(NormalExit(), testing::ExitedWithCode(0), "Success");
-```
-
-Notes:
-- `matcher` can be a regular expression or matcher for stderr output.
-- `predicate` checks exit code or termination signal.
-
+[View the full Assertions Reference](reference/assertions.md)
 
 ---
 
-## Usage Tips & Best Practices
-
-- **Choose between EXPECT_ and ASSERT_ carefully:** Use `ASSERT_` when subsequent test code depends on the assertion passing (e.g., to prevent undefined behavior).
-- **Avoid over-specifying test expectations:** Too strict tests break easily; specify only necessary checks.
-- **Use matchers with `EXPECT_THAT` for expressive tests.**
-- **Keep tests isolated** and fail fast to pinpoint issues easily.
-- **For floating-point comparisons, use specialized macros** instead of standard equality tests.
-- **Use death assertions to verify fatal failures or crashes**, especially when testing assert-like behavior.
-- **Use predicate assertions with descriptive messages** for complex checks.
-
-
----
-
-## Troubleshooting Common Issues
-
-- _Assertion macro doesn’t abort as expected:_ Ensure you use `ASSERT_` instead of `EXPECT_` for fatal failures.
-- _Incorrect string comparison:_ Use `EXPECT_STREQ` or `EXPECT_STRCASEEQ` for C strings rather than `EXPECT_EQ`.
-- _Floating-point precision issues:_ Prefer `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, or `EXPECT_NEAR`.
-- _Death tests fail silently or hang:_ Check that test code actually triggers the termination; watch for threading issues.
-- _Unclear failure messages:_ Add custom failure messages using streaming or use predicate-format assertions.
-
-
----
-
-## Examples
-
-### Basic Equality Check with Custom Message
-
-```cpp
-TEST(MathTest, SumWorks) {
-  int result = Add(2, 2);
-  EXPECT_EQ(result, 4) << "Add() should correctly sum the inputs.";
-}
-```
-
-### Checking String Start with Matcher
-
-```cpp
-using ::testing::StartsWith;
-
-TEST(ApiTest, ReturnsGreeting) {
-  std::string greeting = GetGreeting();
-  ASSERT_THAT(greeting, StartsWith("Hello"));
-}
-```
-
-### Floating-point Approximate Equality
-
-```cpp
-TEST(FloatTest, ComputesPiApprox) {
-  float pi_approx = ComputePi();
-  EXPECT_FLOAT_EQ(pi_approx, 3.14159f);
-}
-```
-
-### Expect an Exception is Thrown
-
-```cpp
-TEST(ExceptionsTest, ThrowsOnInvalidInput) {
-  EXPECT_THROW(ProcessInput("bad"), InvalidInputException);
-}
-```
-
-### Expect Death
-
-```cpp
-TEST(DeathTest, TerminatesOnNullPointer) {
-  EXPECT_DEATH(Process(nullptr), "Null pointer detected");
-}
-```
-
-
----
-
-For a complete list of assertion macros, detailed explanations of matchers, and advanced usage examples, see the [Assertions Reference](reference/assertions.md).
-
-# See Also
-
-- [Matchers Reference](matchers.md) — For advanced argument matching in assertions
-- [gMock for Dummies](guides/getting-started/exploring-mock-objects) — Understand mocking interplay with assertions
-- [Mocking Best Practices](guides/real-world-workflows/mocking-best-practices) — How to use expectations properly
-- [Advanced GoogleTest Topics](guides/advanced-and-integration-guides/ci-integration-and-best-practices) — For sophisticated test management
-
-
-<Info>
-Remember: Use `EXPECT_` assertions if your test can continue after a failure and `ASSERT_` assertions when continuing execution does not make sense.
-</Info>
-
-<Check>
-Always verify that your assertions clearly communicate the intent of your test and provide actionable failure messages.
-</Check>
