--- a/api-reference/core-testing-api/parameterized-and-type-parameterized-tests.mdx
+++ b/api-reference/core-testing-api/parameterized-and-type-parameterized-tests.mdx
@@ -1,319 +1,315 @@
 ---
-title: "Parameterized & Type-Parameterized Tests"
-description: "Covers the APIs and patterns for parameterized and type-parameterized testing. Demonstrates how to run the same test logic with varying data or types, including example usages and extension points."
+title: "Parameterized and Type-Parameterized Tests"
+description: "Explains how to write and instantiate parameterized test cases to improve coverage and DRYness. Offers comprehensive API documentation for value- and type-parameterized test macros, registration, and instantiation."
 ---
 
-# Parameterized & Type-Parameterized Tests
+# Parameterized and Type-Parameterized Tests
 
-This page details the APIs and usage patterns for parameterized and type-parameterized tests in GoogleTest. It helps you apply the same test logic over different sets of input data or types, enabling data-driven and type-driven testing with minimal duplication of code. You will learn how to write and instantiate these tests, customize test names, and understand extension points.
+GoogleTest empowers you to write parameterized test cases that scale test coverage efficiently while keeping your test code clean and maintainable. This page dives deep into how to define, register, and instantiate both value-parameterized and type-parameterized tests using GoogleTest's macros and utilities. You'll learn how to harness parameter generators for flexible test inputs and master the associated API, making your tests DRY (Don’t Repeat Yourself) and expressive.
 
 ---
 
 ## Value-Parameterized Tests
 
-Value-parameterized tests let you run the same test logic multiple times with different values as parameters. This is ideal when you want to validate your code against a variety of data inputs without rewriting the test.
+Value-parameterized tests allow the execution of the same test logic with multiple different input values. This technique dramatically increases test coverage without repeating test code.
 
-### Defining Value-Parameterized Tests
+### 1. Writing Value-Parameterized Tests
 
-1. **Create a Test Fixture** that inherits from `::testing::TestWithParam<T>`, where `T` is the parameter type.
+- Define a test fixture class derived from `testing::TestWithParam<T>`, where `T` represents your parameter type.
 
 ```cpp
-class MyParamTest : public ::testing::TestWithParam<int> {};
+class FooTest : public ::testing::TestWithParam<const char*> {
+  // Implement fixture members if needed.
+};
 ```
 
-2. **Define tests** using the macro `TEST_P` instead of `TEST` or `TEST_F`. Within the test body, use `GetParam()` to access the parameter.
+- Within this fixture, write tests using the `TEST_P` macro. Use `GetParam()` to access the parameter value.
 
 ```cpp
-TEST_P(MyParamTest, IsEven) {
-  int x = GetParam();
-  EXPECT_EQ(x % 2, 0);
+TEST_P(FooTest, DoesBlah) {
+  EXPECT_TRUE(SomeFunction(GetParam()));
 }
 ```
 
-3. **Instantiate the test suite** with various parameter values using `INSTANTIATE_TEST_SUITE_P` and one of GoogleTest's parameter generators such as `Values()`, `Range()`, or `Combine()`.
+### 2. Instantiating Parameterized Tests
 
-```cpp
-INSTANTIATE_TEST_SUITE_P(EvenNumbers, MyParamTest, ::testing::Values(2, 4, 6));
-```
+You instantiate the tests using `INSTANTIATE_TEST_SUITE_P`, specifying:
 
-This will run the test `IsEven` three times with parameters `2`, `4`, and `6`.
-
-### Parameter Generators
-
-GoogleTest supports several built-in parameter generators:
-
-| Generator                              | Description                                                      |
-|--------------------------------------|------------------------------------------------------------------|
-| `Range(begin, end [, step])`          | Generates a sequence from `begin` to `end - 1` stepping by `step` (default 1). |
-| `Values(v1, v2, ..., vN)`             | Generates exact values `v1` through `vN`.                         |
-| `ValuesIn(container)`                  | Generates values from any STL container, C-style array or iterator range. |
-| `Bool()`                             | Generates the boolean values `false` and `true`.                 |
-| `Combine(g1, g2, ..., gN)`            | Cartesian product of test parameters from multiple generators, yielding tuples. |
-| `ConvertGenerator<T>(g)`              | Converts the values produced by generator `g` to type `T`. Can be used with a callable to customize conversion. |
-
-### Customizing Test Names
-
-By default, test names for parameterized tests include the instantiation prefix, suite name, test name, and a numeric parameter index. You can generate meaningful names with an optional *name generator* function or functor passed as the fourth argument to `INSTANTIATE_TEST_SUITE_P`.
+- A unique instantiation name.
+- The test suite name.
+- A parameter generator that yields the parameter values.
 
 ```cpp
 INSTANTIATE_TEST_SUITE_P(
-    CustomNames, MyParamTest, ::testing::Values(1, 2, 3),
-    [](const ::testing::TestParamInfo<int>& info) {
-      return "Param_" + std::to_string(info.param);
+    MyInstantiation, FooTest,
+    testing::Values("meeny", "miny", "moe")
+);
+```
+
+This creates tests with names like `MyInstantiation/FooTest.DoesBlah/0`, each running `DoesBlah` with a different parameter value.
+
+### 3. Parameter Generators
+
+GoogleTest provides flexible parameter generators in the `testing` namespace to produce sequences or sets of parameter values:
+
+| Generator                   | Description                                                                                      |
+|-----------------------------|------------------------------------------------------------------------------------------------|
+| `Range(begin, end [, step])`| Generates a sequence including `begin` but excluding `end`. `step` defaults to 1.               |
+| `Values(v1, v2, ..., vN)`   | Enumerates specific values explicitly.                                                       |
+| `ValuesIn(container)` or `ValuesIn(begin, end)` | Generates values from C-style arrays, STL containers, or iterator ranges.          |
+| `Bool()`                   | Generates the boolean sequence `{false, true}`.                                               |
+| `Combine(g1, g2, ..., gN)` | Produces the Cartesian product of values from multiple generators, yielding tuples.           |
+| `ConvertGenerator<T>(g)` or `ConvertGenerator(g, func)` | Converts generated values to a target type `T` or via a conversion function.       |
+
+### 4. Customizing Test Names
+
+Optionally, you can specify a custom name generator function or functor that takes a `testing::TestParamInfo<T>` and returns a string suffix used in test names. This is helpful when default names (like indices) aren't descriptive enough.
+
+```cpp
+INSTANTIATE_TEST_SUITE_P(
+    CustomName, MyTestSuite, testing::Values(1, 2, 3),
+    [](const testing::TestParamInfo<MyTestSuite::ParamType>& info) {
+      return "Param_" + std::to_string(info.index);
     });
 ```
 
-Names must be unique, non-empty, and can only contain alphanumeric characters.
+### 5. Important Macros and Utilities
 
-### Defining Abstract Parameterized Tests
+- **`TEST_P(fixture, test_name)`**: Defines a parameterized test using the given fixture.
+- **`INSTANTIATE_TEST_SUITE_P(instantiation_name, fixture, param_generator, [name_generator])`**: Instantiates the parameterized test suite with generated parameters and optional custom names.
+- **`GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST(TestSuiteName)`**: Suppresses failure if a parameterized test suite is defined but never instantiated.
 
-If you want to define parameterized tests that will be instantiated multiple times or across source files, define your fixture and `TEST_P` in a header/source file pair and let users instantiate using `INSTANTIATE_TEST_SUITE_P` later.
-
-This design helps test common interfaces or implementations without repeating test logic.
-
----
-
-## Typed Tests
-
-Typed tests let you run the same test logic over multiple types. This is suitable for cases where you want to ensure various implementations or type specializations behave consistently.
-
-### Defining Typed Tests
-
-1. **Create a class template fixture inheriting from `::testing::Test`.**
+### 6. Example: Simple Parameterized Test
 
 ```cpp
-template <typename T>
-class FooTest : public ::testing::Test {
- public:
-  T value_{};
-  static T shared_;
-};
-```
+class IntTest : public ::testing::TestWithParam<int> {};
 
-2. **Define a type list alias using `::testing::Types`.**
-
-```cpp
-using MyTypes = ::testing::Types<int, double, std::string>;
-```
-
-3. **Use `TYPED_TEST_SUITE` to associate the fixture and the type list.**
-
-```cpp
-TYPED_TEST_SUITE(FooTest, MyTypes);
-```
-
-4. **Write tests using `TYPED_TEST`. Use `TypeParam` to refer to the current type parameter, and `TestFixture` to refer to the fixture.**
-
-```cpp
-TYPED_TEST(FooTest, IsDefaultConstructible) {
-  TypeParam val = this->value_;
-  EXPECT_TRUE(true);  // Your test logic here
+TEST_P(IntTest, IsPositive) {
+  EXPECT_GT(GetParam(), 0);
 }
+
+INSTANTIATE_TEST_SUITE_P(PositiveNumbers, IntTest, testing::Values(1, 2, 3));
 ```
 
-Each `TYPED_TEST` will be instantiated and run for every type in `MyTypes`.
-
-### Custom Type Names
-
-You can define a `NameGenerator` class with a template static function `GetName(int index)` returning a `std::string`. Provide it as an optional third argument to `TYPED_TEST_SUITE` to customize type-based test suffixes.
-
-Example:
-
-```cpp
-class MyTypeNames {
- public:
-  template <typename T>
-  static std::string GetName(int) {
-    if constexpr (std::is_same_v<T, int>) return "Int";
-    if constexpr (std::is_same_v<T, double>) return "Double";
-    return "Unknown";
-  }
-};
-
-TYPED_TEST_SUITE(FooTest, MyTypes, MyTypeNames);
-```
+This will run `IsPositive` three times with parameters 1, 2, and 3.
 
 ---
 
 ## Type-Parameterized Tests
 
-Type-parameterized tests are similar to typed tests but with more flexibility: you define the tests without knowing the list of types beforehand and instantiate them multiple times in different places if needed. This is useful for interface or concept testing.
+Type-parameterized tests enable running the same test logic over a list of types instead of values. This approach is ideal for verifying generics, concepts, or interface conformance across implementations.
 
-### Defining Type-Parameterized Tests
+### 1. Writing Typed Tests
 
-1. **Define a class template fixture inheriting from `::testing::Test`.**
-
-```cpp
-template <typename T>
-class MyTypeParamTest : public ::testing::Test {};
-```
-
-2. **Declare the test suite name as type-parameterized using `TYPED_TEST_SUITE_P`.**
-
-```cpp
-TYPED_TEST_SUITE_P(MyTypeParamTest);
-```
-
-3. **Define tests using `TYPED_TEST_P`, same as typed tests but for the pattern.**
-
-```cpp
-TYPED_TEST_P(MyTypeParamTest, DoesSomething) {
-  TypeParam val{};
-  EXPECT_TRUE(true);  // Your test code
-}
-```
-
-4. **Register the tests in the suite using `REGISTER_TYPED_TEST_SUITE_P`.**
-
-```cpp
-REGISTER_TYPED_TEST_SUITE_P(MyTypeParamTest, DoesSomething);
-```
-
-5. **Instantiate the test suite with a list of types using `INSTANTIATE_TYPED_TEST_SUITE_P`.**
-
-```cpp
-using MyTypes = ::testing::Types<int, double>;
-INSTANTIATE_TYPED_TEST_SUITE_P(MyInstance, MyTypeParamTest, MyTypes);
-```
-
-You can instantiate multiple times with different type lists and prefixes.
-
-### Custom Name Generation
-
-Like typed tests, you can provide a name generator as the optional fourth argument in `INSTANTIATE_TYPED_TEST_SUITE_P`.
-
-### Notes
-
-- Type-parameterized test suites can be defined and instantiated across multiple translation units.
-- You must register all tests before instantiating.
-
----
-
-## Best Practices & Common Pitfalls
-
-- **Always give meaningful names** to your parameterized and typed test instantiations to keep outputs readable and manageable.
-- **Avoid underscores in test and suite names** as they may interfere with test class naming conventions.
-- **Declare `SetUpTestSuite()` and `TearDownTestSuite()` as `public` when used with `TEST_P` to avoid linkage and instantiation issues.**
-- **Use `GetParam()` only inside tests defined by `TEST_P`.**
-- **Parameterized tests create a fresh instance for each parameter**, so do not attempt cross-parameter data sharing unless static.
-- **Typed and type-parameterized tests give type info in their names**, which helps identify which type caused a failure.
-
----
-
-## Examples
-
-### Value-Parameterized Test Example
-
-```cpp
-class IntParamTest : public ::testing::TestWithParam<int> {};
-
-TEST_P(IntParamTest, IsPositive) {
-  EXPECT_GT(GetParam(), 0);
-}
-
-INSTANTIATE_TEST_SUITE_P(
-    PositiveValues, IntParamTest, ::testing::Values(1, 2, 3, 10));
-```
-
-This runs the `IsPositive` test 4 times, each with values 1, 2, 3, and 10.
-
-### Typed Test Example
+- Define a class template fixture derived from `testing::Test`, parameterized by a type `T`.
 
 ```cpp
 template <typename T>
-class MyTypedTest : public ::testing::Test {
+class MyFixture : public testing::Test {
  public:
-  T value = 0;
+  // Fixture members referencing T
+  T value_;
+};
+```
+
+- Declare the list of types to test using `testing::Types<>` and associate them to the fixture using `TYPED_TEST_SUITE`.
+
+```cpp
+using MyTypes = ::testing::Types<char, int, unsigned int>;
+TYPED_TEST_SUITE(MyFixture, MyTypes);
+```
+
+- Write tests with the `TYPED_TEST` macro. The special name `TypeParam` in the test refers to the type parameter.
+
+```cpp
+TYPED_TEST(MyFixture, HasDefaultValue) {
+  TypeParam val{};  // Default construct
+  EXPECT_EQ(val, TypeParam{});
+}
+```
+
+### 2. Type-Parameterized Tests vs Typed Tests
+
+- *Typed tests* require knowing all testing types upfront where the type list is declared alongside test definitions.
+- *Type-parameterized tests* allow defining tests independently of specific types and instantiating later. This enables sharing test patterns across libraries and consumers.
+
+### 3. Declaring Type-Parameterized Tests
+
+- Use `TYPED_TEST_SUITE_P` to declare a test suite template.
+- Define individual `TYPED_TEST_P` tests in the suite.
+- Register tests with `REGISTER_TYPED_TEST_SUITE_P`.
+
+```cpp
+template <typename T>
+class MyGenericTest : public testing::Test {};
+
+TYPED_TEST_SUITE_P(MyGenericTest);
+
+TYPED_TEST_P(MyGenericTest, Test1) {
+  TypeParam val;
+  // test logic
+}
+
+TYPED_TEST_P(MyGenericTest, Test2) { ... }
+
+REGISTER_TYPED_TEST_SUITE_P(MyGenericTest, Test1, Test2);
+```
+
+### 4. Instantiating Type-Parameterized Tests
+
+- Use `INSTANTIATE_TYPED_TEST_SUITE_P` with an instantiation name, test suite name, and types list.
+
+```cpp
+using MyTypes = ::testing::Types<char, int, unsigned int>;
+INSTANTIATE_TYPED_TEST_SUITE_P(MyInstances, MyGenericTest, MyTypes);
+```
+
+### 5. Customizing Type Names
+
+You can supply a third optional parameter to `TYPED_TEST_SUITE` or `INSTANTIATE_TYPED_TEST_SUITE_P` which is a class with a templated static `GetName(int)` method returning strings to customize test suite names for each type.
+
+```cpp
+class NameGen {
+ public:
+  template <typename T>
+  static std::string GetName(int) {
+    if constexpr (std::is_same_v<T, char>) return "char";
+    if constexpr (std::is_same_v<T, int>) return "int";
+    // ...
+  }
 };
 
-using MyTypes = ::testing::Types<int, double, float>;
-TYPED_TEST_SUITE(MyTypedTest, MyTypes);
-
-TYPED_TEST(MyTypedTest, IsZeroInitially) {
-  TypeParam x = this->value;
-  EXPECT_EQ(x, 0);
-}
+TYPED_TEST_SUITE(MyFixture, MyTypes, NameGen);
 ```
 
-### Type-Parameterized Test Example
+### 6. Example: Typed Test
 
 ```cpp
 template <typename T>
-class MyTypeParamTest : public ::testing::Test {};
+class NumericTest : public testing::Test {
+ public:
+  T value_ = T();
+};
 
-TYPED_TEST_SUITE_P(MyTypeParamTest);
+using NumericTypes = testing::Types<int, double>;
+TYPED_TEST_SUITE(NumericTest, NumericTypes);
 
-TYPED_TEST_P(MyTypeParamTest, IsDefaultConstructible) {
-  TypeParam x{};
-  (void)x;
-  SUCCEED();
+TYPED_TEST(NumericTest, DefaultIsZero) {
+  EXPECT_EQ(this->value_, TypeParam{});
+}
+```
+
+### 7. Example: Type-Parameterized Test
+
+```cpp
+template <typename T>
+class MyInterfaceTest : public testing::Test {};
+
+TYPED_TEST_SUITE_P(MyInterfaceTest);
+
+TYPED_TEST_P(MyInterfaceTest, DoesSomething) {
+  // test using TypeParam
 }
 
-REGISTER_TYPED_TEST_SUITE_P(MyTypeParamTest, IsDefaultConstructible);
+REGISTER_TYPED_TEST_SUITE_P(MyInterfaceTest, DoesSomething);
 
-using TypesToTest = ::testing::Types<int, std::string>;
-INSTANTIATE_TYPED_TEST_SUITE_P(MyInstance, MyTypeParamTest, TypesToTest);
+using MyTypes = testing::Types<int, float, double>;
+INSTANTIATE_TYPED_TEST_SUITE_P(MyInstances, MyInterfaceTest, MyTypes);
+```
+
+### 8. Additional Macros
+
+- `TYPED_TEST_SUITE`, `TYPED_TEST` for typed tests.
+- `TYPED_TEST_SUITE_P`, `TYPED_TEST_P`, `REGISTER_TYPED_TEST_SUITE_P`, and `INSTANTIATE_TYPED_TEST_SUITE_P` for type-parameterized tests.
+
+---
+
+## Best Practices and Troubleshooting
+
+### Best Practices
+
+- Use parameterized tests to simplify repetitive test logic across multiple values or types.
+- Provide informative custom names for parameterized test instances to improve test output clarity.
+- For complex parameters, use `ConvertGenerator` to convert generated parameter types properly.
+- Declare `SetUpTestSuite()` and `TearDownTestSuite()` **public** if you use `TEST_P` or typed tests to avoid access errors.
+- Use `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST` to suppress errors for parameterized test suites intentionally uninstantiated.
+
+### Common Pitfalls
+
+- Forgetting to instantiate parameterized test suites will cause test failures.
+- Using underscores in test suite or test names is disallowed; names must be valid C++ identifiers without underscores.
+- Test name suffixes generated for parameterized tests must be alphanumeric and underscore only.
+- Parameter generators are evaluated during `InitGoogleTest()`, not at instantiation or run-time.
+
+### Troubleshooting Tips
+
+- If tests seem missing, confirm corresponding `INSTANTIATE_TEST_SUITE_P` macros exist and are correctly written.
+- Use `--gtest_list_tests` command-line flag to list all tests and verify parameterized tests are instantiated.
+- Review custom name generator logic when seeing invalid or duplicate test names.
+- Ensure your parameter types are copyable and printable or provide custom printer overloads.
+
+---
+
+## Summary
+
+This page walked you through writing and instantiating parameterized and type-parameterized tests with GoogleTest. Whether your goal is to test behavior across sets of values or types, these macros and utilities give you the flexibility to craft maintainable and scalable test suites.
+
+For hands-on examples and more detailed guidance, refer to the [GoogleTest Primer](../../docs/primer.md), the [Advanced Testing Strategies Guide](../../guides/advanced-testing-strategies/parameterized-and-typed-tests.mdx), and the detailed [Testing Reference](../reference/testing.md).
+
+---
+
+# References
+
+- [TEST_P Macro and Parameterized Tests](../reference/testing.md#TEST_P)
+- [INSTANTIATE_TEST_SUITE_P Macro](../reference/testing.md#INSTANTIATE_TEST_SUITE_P)
+- [Typed Tests and Type-Parameterized Tests](../reference/testing.md#TYPED_TEST_SUITE)
+- [REGISTER_TYPED_TEST_SUITE_P and INSTANTIATE_TYPED_TEST_SUITE_P](../reference/testing.md#REGISTER_TYPED_TEST_SUITE_P)
+- [Value-Parameterized Tests Guide](../../guides/advanced-testing-strategies/parameterized-and-typed-tests.mdx)
+- [Typed Tests Guide](../../docs/advanced.md#typed-tests)
+
+---
+
+# Code Example: Value-Parameterized Test with Custom Names
+
+```cpp
+#include <gtest/gtest.h>
+
+class MyTest : public ::testing::TestWithParam<int> {};
+
+TEST_P(MyTest, IsEven) {
+  EXPECT_EQ(GetParam() % 2, 0);
+}
+
+// Custom name generator
+std::string CustomNameGenerator(
+    const ::testing::TestParamInfo<MyTest::ParamType>& info) {
+  return "Value" + std::to_string(info.param);
+}
+
+INSTANTIATE_TEST_SUITE_P(MyValues, MyTest, testing::Values(2, 4, 6), CustomNameGenerator);
+```
+
+This produces tests named `MyValues/MyTest.IsEven/Value2`, etc., providing clear output.
+
+# Code Example: Type-Parameterized Test
+
+```cpp
+#include <gtest/gtest.h>
+
+template <typename T>
+class MyTypedTest : public testing::Test {
+ public:
+  T val_ = T();
+};
+
+using MyTypes = testing::Types<int, double>;
+
+TYPED_TEST_SUITE(MyTypedTest, MyTypes);
+
+TYPED_TEST(MyTypedTest, IsDefaultConstructible) {
+  TypeParam val = this->val_;
+  EXPECT_EQ(val, TypeParam{});
+}
 ```
 
 ---
-
-## Troubleshooting
-
-- If your parameterized tests don’t run, verify you have paired `TEST_P` with `INSTANTIATE_TEST_SUITE_P`.
-- If your typed or type-parameterized tests show duplicate test suite names or fail to compile, ensure test suite names and type names don’t contain underscores.
-- Custom test name generators must return valid, unique, and non-empty test suffixes.
-- When using `ConvertGenerator`, be careful with lifetime issues (especially with string types and implicit conversions).
-- Remember to declare `SetUpTestSuite()` and `TearDownTestSuite()` as `public` in parameterized fixtures.
-
----
-
-## Related APIs
-
-For more detail on APIs and usage, see [Testing Reference](../reference/testing.md#TEST_P), [Typed Tests](../advanced.md#typed-tests), and [Value-Parameterized Tests](../advanced.md#value-parameterized-tests).
-
----
-
-## Mermaid Diagram: Test Flow for Parameterized and Typed Tests
-
-```mermaid
-flowchart TD
-
-  Start([Start Test Run]) --> DefineFixtures["Define Test Fixtures"]
-  DefineFixtures --> DefineParamTests["Define Parameterized Tests (TEST_P / TYPED_TEST)"]
-  DefineParamTests --> InstantiateTests["Instantiate with INSTANTIATE_TEST_SUITE_P / TYPED_TEST_SUITE"]
-  InstantiateTests --> SelectTests["Filter & Select Tests to Run"]
-
-  SelectTests --> RunValueParamTests["Run Value-Parameterized Tests"]
-  SelectTests --> RunTypedTests["Run Typed Tests"]
-  SelectTests --> RunTypeParamTests["Run Type-Parameterized Tests"]
-
-  RunValueParamTests --> ExecuteTest["Execute Test Logic with GetParam()"]
-  RunTypedTests --> ExecuteTest2["Execute Test Logic with TypeParam"]
-  RunTypeParamTests --> ExecuteTest3["Execute Test Logic with TypeParam"]
-
-  ExecuteTest --> CollectResults["Collect & Report Results"]
-  ExecuteTest2 --> CollectResults
-  ExecuteTest3 --> CollectResults
-
-  CollectResults --> End([End Test Run])
-
-  classDef startend fill:#f9f,stroke:#333,stroke-width:2px;
-  class Start,End startend;
-```
-
----
-
-## References
-- [Value-Parameterized Tests](../advanced.md#value-parameterized-tests)
-- [Typed Tests](../advanced.md#typed-tests)
-- [Type-Parameterized Tests](../advanced.md#type-parameterized-tests)
-- [Parameterized & Typed Tests in Testing Reference](../reference/testing.md#TEST_P)
-- [GoogleTest Primer](../primer.md)
-
----
-
-For comprehensive guides on test writing and mocking, see the Getting Started section and guides on mocking at:
-- [Writing Your First Test](../../guides/getting-started/writing-first-test)
-- [Using GoogleMock Basics](../../getting_started/first_test_and_validation/using_googlemock_basics)
-
-Next steps: explore [Mocking Patterns](../../guides/core-workflows/mocking-patterns) and [Test Lifecycle & Execution](../../api-reference/core-testing-api/test-lifecycle-and-execution) for deeper mastery.
